pxc/tests/test_047_expand/empty1.px
public namespace empty1;
import core::common -;
import core::meta m;

function void test1()
{
  expand (i : m::list{"x", "y"}) { // error: empty base expression
  }
}

test1();

